src/objects/subject__c.object
<CustomObject>
    <fields>
        <fullName>Daa__c</fullName>
        <label>Daa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <label>Network</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_analysis__c</fullName>
        <label>Network analysis</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Networking__c</fullName>
        <label>Networking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vec_mec__c</fullName>
        <label>Vec mec</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c__c</fullName>
        <label>c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cloud__c</fullName>
        <label>cloud</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cplus__c</fullName>
        <label>cplus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>data_structure__c</fullName>
        <label>data structure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>digital__c</fullName>
        <label>digital</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>electronics__c</fullName>
        <label>electronics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>subject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>subject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subjects</pluralLabel>
    <recordTypes>
        <fullName>Computer_science</fullName>
        <active>true</active>
        <label>Computer science</label>
    </recordTypes>
    <recordTypes>
        <fullName>Electronics</fullName>
        <active>true</active>
        <label>Electronics</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>